{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 1763,
  "lineage": "8359dde6-2b30-875a-ca4f-e91f66bfe662",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fpm_ec2_website_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d52ddcdf3a885741",
            "arn": "arn:aws:ec2:us-east-1:948107632124:instance/i-00a33f35a357d56d6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a33f35a357d56d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00f8ea5843f26fb25",
            "private_dns": "ip-10-0-0-94.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09766ee1efda66b45",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a008d9c70a421ca8",
            "tags": {
              "Name": "fpm_ec2_website_instance"
            },
            "tags_all": {
              "Name": "fpm_ec2_website_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-055e6a36480b3a172"
            ]
          },
          "dependencies": [
            "aws_instance.nginx_ec2_website_instance",
            "aws_security_group.fpm_ec2_website_security_group",
            "aws_security_group.http_ssh_ec2_website_security_group",
            "aws_subnet.private_website_fpm_nginx_subnet_0",
            "aws_subnet.public_website_fpm_nginx_subnet",
            "aws_vpc.website_fpm_nginx_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_ec2_website_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d52ddcdf3a885741",
            "arn": "arn:aws:ec2:us-east-1:948107632124:instance/i-03c8bdef074392163",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c8bdef074392163",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08635abcf26ba4975",
            "private_dns": "ip-10-0-2-244.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.244",
            "public_ip": "52.91.47.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08f0726cdcf819c32",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054a74a0d73a2ef97",
            "tags": {
              "Name": "nginx_ec2_website_instance"
            },
            "tags_all": {
              "Name": "nginx_ec2_website_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ac981a45bafd92ec"
            ]
          },
          "dependencies": [
            "aws_security_group.http_ssh_ec2_website_security_group",
            "aws_subnet.public_website_fpm_nginx_subnet",
            "aws_vpc.website_fpm_nginx_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "website_fpm_nginx_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948107632124:internet-gateway/igw-0905d2b38ab45c825",
            "id": "igw-0905d2b38ab45c825",
            "owner_id": "948107632124"
          },
          "dependencies": [
            "aws_vpc.website_fpm_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_website_fpm_nginx_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948107632124:route-table/rtb-066a6d20fcad2471e",
            "id": "rtb-066a6d20fcad2471e",
            "owner_id": "948107632124",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_website_fpm_nginx_rt"
            },
            "tags_all": {
              "Name": "private_website_fpm_nginx_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f628a161c6a562c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.website_fpm_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_website_fpm_nginx_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948107632124:route-table/rtb-017a7e59e962f2df1",
            "id": "rtb-017a7e59e962f2df1",
            "owner_id": "948107632124",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0905d2b38ab45c825",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_website_fpm_nginx_rt"
            },
            "tags_all": {
              "Name": "public_website_fpm_nginx_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f628a161c6a562c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.website_fpm_nginx_gateway",
            "aws_vpc.website_fpm_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5747f5a8fd1451c",
            "route_table_id": "rtb-066a6d20fcad2471e",
            "subnet_id": "subnet-0a008d9c70a421ca8"
          },
          "dependencies": [
            "aws_route_table.private_website_fpm_nginx_rt",
            "aws_subnet.private_website_fpm_nginx_subnet_0",
            "aws_vpc.website_fpm_nginx_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041e375bd3d77bd75",
            "route_table_id": "rtb-066a6d20fcad2471e",
            "subnet_id": "subnet-085b0153f5c4af3c6"
          },
          "dependencies": [
            "aws_route_table.private_website_fpm_nginx_rt",
            "aws_subnet.private_website_fpm_nginx_subnet_1",
            "aws_vpc.website_fpm_nginx_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03983c67d52b7d3fb",
            "route_table_id": "rtb-017a7e59e962f2df1",
            "subnet_id": "subnet-054a74a0d73a2ef97"
          },
          "dependencies": [
            "aws_internet_gateway.website_fpm_nginx_gateway",
            "aws_route_table.public_website_fpm_nginx_rt",
            "aws_subnet.public_website_fpm_nginx_subnet",
            "aws_vpc.website_fpm_nginx_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fpm_ec2_website_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948107632124:security-group/sg-055e6a36480b3a172",
            "description": "ec2 security group built for the website by terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055e6a36480b3a172",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.244/32"
                ],
                "description": "http access",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "10.0.2.244/32"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "fpm_ec2_website_security_group",
            "name_prefix": "",
            "owner_id": "948107632124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fpm_ec2_website_security_group"
            },
            "tags_all": {
              "Name": "fpm_ec2_website_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f628a161c6a562c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.nginx_ec2_website_instance",
            "aws_security_group.http_ssh_ec2_website_security_group",
            "aws_subnet.public_website_fpm_nginx_subnet",
            "aws_vpc.website_fpm_nginx_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_ssh_ec2_website_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948107632124:security-group/sg-0ac981a45bafd92ec",
            "description": "http ssh ec2 security group built for the website by terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac981a45bafd92ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/22"
                ],
                "description": "as proxy",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "http_ssh_ec2_website_security_group",
            "name_prefix": "",
            "owner_id": "948107632124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "http_ssh_ec2_website_security_group"
            },
            "tags_all": {
              "Name": "http_ssh_ec2_website_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f628a161c6a562c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.website_fpm_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_website_fpm_nginx_subnet_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948107632124:subnet/subnet-0a008d9c70a421ca8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a008d9c70a421ca8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "948107632124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_website_fpm_nginx_sn_0"
            },
            "tags_all": {
              "Name": "private_website_fpm_nginx_sn_0"
            },
            "vpc_id": "vpc-0f628a161c6a562c2"
          },
          "dependencies": [
            "aws_vpc.website_fpm_nginx_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_website_fpm_nginx_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948107632124:subnet/subnet-085b0153f5c4af3c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085b0153f5c4af3c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "948107632124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_website_fpm_nginx_sn_1"
            },
            "tags_all": {
              "Name": "private_website_fpm_nginx_sn_1"
            },
            "vpc_id": "vpc-0f628a161c6a562c2"
          },
          "dependencies": [
            "aws_vpc.website_fpm_nginx_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_website_fpm_nginx_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948107632124:subnet/subnet-054a74a0d73a2ef97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054a74a0d73a2ef97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "948107632124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_website_fpm_nginx_sn"
            },
            "tags_all": {
              "Name": "public_website_fpm_nginx_sn"
            },
            "vpc_id": "vpc-0f628a161c6a562c2"
          },
          "dependencies": [
            "aws_vpc.website_fpm_nginx_vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "website_fpm_nginx_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948107632124:vpc/vpc-0f628a161c6a562c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/22",
            "default_network_acl_id": "acl-07360dc4d796dc400",
            "default_route_table_id": "rtb-0d5035e38fc83d22e",
            "default_security_group_id": "sg-08600ff33a703fb1e",
            "dhcp_options_id": "dopt-00d9007887d4ebe46",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f628a161c6a562c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d5035e38fc83d22e",
            "owner_id": "948107632124",
            "tags": {
              "Name": "website_fpm_nginx_vpc"
            },
            "tags_all": {
              "Name": "website_fpm_nginx_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_connect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:948107632124:vpc-endpoint/vpce-03c191a5bb4e5358b",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-03c191a5bb4e5358b",
            "owner_id": "948107632124",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-017a7e59e962f2df1",
              "rtb-066a6d20fcad2471e"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "website_vpc_endpoint_s3"
            },
            "tags_all": {
              "Name": "website_vpc_endpoint_s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f628a161c6a562c2"
          },
          "dependencies": [
            "aws_internet_gateway.website_fpm_nginx_gateway",
            "aws_route_table.private_website_fpm_nginx_rt",
            "aws_route_table.public_website_fpm_nginx_rt",
            "aws_vpc.website_fpm_nginx_vpc",
            "data.aws_vpc_endpoint_service.s3"
          ]
        }
      ]
    }
  ]
}